--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,19 @@
-.DS_Store
-node_modules
-/dist
+# /dist
 
-# local env files
+# system
+.DS_Store
+
+# env
+node_modules
 .env.local
 .env.*.local
 
-# Log files
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Editor directories and files
+# editor
 .idea
 .vscode
 *.suo
